[metadata]
name = muni
version = 0.1
author = Johnathan Jenkins
author_email = jj@jsqr.org
description = Automated analysis of municipal codes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsqr/muniscope
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.12
install_requires =
    openai
    marvin
    psycopg[binary]

[options.packages.find]
include = muni
